--- a/assets/styles/_variables.less
+++ b/assets/styles/_variables.less
@@ -1,24 +1,28 @@
 @mobile: 768px;
+@header-navigation-mobile: 1070px;
 
 :root {
   font-size: 16px;
   line-height: 150%;
 
   --color-light: #fff;
-  --color-dark: #0a0404;
-  --color-dark1: hsla(345, 5%, 36%, .5);
+  --color-dark: #4c484e;
+  --color-dark1: #848485;
   --color-dark2: rgba(0, 0, 0, .7);
+  --color-dark3: #35363a;
 
-  --color1: hsl(215, 75%, 34%);
-  --color1-alter: hsl(205, 55%, 34%);
-  --color1-light: hsla(215, 75%, 34%, .6);
-  --color1-light2: hsla(215, 75%, 34%, .2);
+  --color1: hsl(209, 59%, 14%);
+  --color1-alter: hsl(209, 39%, 14%);
+  --color1-light: hsla(209, 59%, 14%, .6);
+  --color1-light2: hsla(209, 59%, 14%, .2);
 
-  --color2: hsl(198, 75%, 51%);
-  --color2-alter: hsl(198, 55%, 51%);
-  --color2-light: hsla(198, 75%, 51%, .6);
-  --color2-light2: hsla(198, 75%, 51%, .2);
-  --color2-light3: hsla(198, 75%, 51%, .1);
+  --color2: hsl(220, 58%, 20%);
+  --color2-alter: hsl(220, 38%, 20%);
+  --color2-light: hsla(220, 58%, 20%, .6);
+  --color2-light2: hsla(220, 58%, 20%, .2);
+  --color2-light3: hsla(220, 58%, 20%, .1);
+
+  --slinky-bg: #f6f7f8;
 
   //additional colors that suggested by chatGTP
   --color3: hsl(166, 75%, 34%);
@@ -32,6 +36,8 @@
 
   --lh: 150%;
   --transition: all .25s linear;
+
+  --border-radius: 5px;
 
   --shadow: 0px 0px 5px var(--color1-alter);
 
