--- a/assets/styles/_footer.less
+++ b/assets/styles/_footer.less
@@ -1,24 +1,69 @@
+@import "_variables";
+
 .site-footer {
-  padding-top: var(--gap-md);
-  background-color: var(--color-dark2);
+  margin-top: var(--gap-xsm);
+  background-color: #444645;
   color: var(--color-light);
+  line-height: var(--lh);
 
   a {
-    color: var(--color2);
+    color: inherit;
+    transition: var(--transition);
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  .footer-badges {
+    background-color: var(--color1);
+
+    .hb-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+    }
+  }
+
+  .footer-line {
+    background-color: var(--color2);
+
+    .hb-container {
+      padding-block: var(--gap-sm);
+      font-weight: 500;
+    }
+  }
+
+  a {
     text-decoration: none;
   }
 
   &__holder {
+    padding-top: var(--gap-md);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     gap: var(--gap-sm);
+
+    & > *, .cell {
+      line-height: var(--lh);
+    }
+
+    @media (max-width: @mobile) {
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   &__item {
     display: flex;
     flex-direction: column;
     gap: var(--gap-xsm);
+
+    @media (max-width: @mobile) {
+      flex: 1 1 100%;
+    }
+
     ul {
       padding: 0;
       margin: 0;
@@ -27,64 +72,58 @@
 
     li {
       margin-bottom: 5px;
+      line-height: var(--lh);
     }
   }
 
-  &__logo {
-    text-align: center;
-    gap: var(--gap-sm);
-    .custom-logo {
-      padding: var(--gap-xsm);
-      background-color: var(--color-light);
-      border-radius: 5px;
-    }
-    @media (max-width: @mobile) {
-      justify-self: center;
-      align-self: center;
-      margin-inline: auto;
+  .footer-menu {
+    &__heading {
+      margin: 0;
+      margin-bottom: var(--gap-xsm);
     }
   }
 
-  &__bottom {
+  &__links {
     display: flex;
     flex-wrap: wrap;
-    gap: var(--gap-md);
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    margin-bottom: var(--gap-sm);
+    gap: var(--gap-sm);
+    margin-block: var(--gap-sm);
+  }
+
+  &__social {
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--gap-sm);
+    font-size: 35px;
 
     @media (max-width: @mobile) {
-      gap: var(--gap-xsm);
-    }
-  }
-
-  &__social-heading, &__accept-heading {
-    margin: 0;
-    margin-bottom: var(--gap-xsm);
-    text-align: center;
-  }
-
-  &__social-items, &__accept-items {
-    display: flex;
-    gap: var(--gap-sm);
-    
-
-
-    a, i {
-      color: var(--color-light);
-      font-size: 30px;
+      justify-content: center;
+      align-items: center;
     }
 
-    a:hover {
-      i {
-        color: var(--color2);
+    a {
+      &:hover {
+        color: var(--color1-alter);
       }
     }
   }
 
+  &__accept {
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--gap-sm);
+    font-size: 35px;
+
+    i {
+    }
+  }
+
   &__copyright {
-    padding-block: var(--gap-xsm);
-    margin-top: var(--gap-xsm);
-    border-top: 1px solid var(--color-light);
+    padding-block: 0 var(--gap-xsm);
+    //margin-top: var(--gap-xsm);
+    //border-top: 1px solid var(--color-light);
+    font-size: 14px;
   }
 }
