--- a/assets/styles/_woocommerce.css
+++ b/assets/styles/_woocommerce.css
@@ -2,18 +2,20 @@
   font-size: 16px;
   line-height: 150%;
   --color-light: #fff;
-  --color-dark: #0a0404;
-  --color-dark1: hsla(345, 5%, 36%, 0.5);
+  --color-dark: #4c484e;
+  --color-dark1: #848485;
   --color-dark2: rgba(0, 0, 0, 0.7);
-  --color1: hsl(215, 75%, 34%);
-  --color1-alter: hsl(205, 55%, 34%);
-  --color1-light: hsla(215, 75%, 34%, 0.6);
-  --color1-light2: hsla(215, 75%, 34%, 0.2);
-  --color2: hsl(198, 75%, 51%);
-  --color2-alter: hsl(198, 55%, 51%);
-  --color2-light: hsla(198, 75%, 51%, 0.6);
-  --color2-light2: hsla(198, 75%, 51%, 0.2);
-  --color2-light3: hsla(198, 75%, 51%, 0.1);
+  --color-dark3: #35363a;
+  --color1: hsl(209, 59%, 14%);
+  --color1-alter: hsl(209, 39%, 14%);
+  --color1-light: hsla(209, 59%, 14%, 0.6);
+  --color1-light2: hsla(209, 59%, 14%, 0.2);
+  --color2: hsl(220, 58%, 20%);
+  --color2-alter: hsl(220, 38%, 20%);
+  --color2-light: hsla(220, 58%, 20%, 0.6);
+  --color2-light2: hsla(220, 58%, 20%, 0.2);
+  --color2-light3: hsla(220, 58%, 20%, 0.1);
+  --slinky-bg: #f6f7f8;
   --color3: hsl(166, 75%, 34%);
   --color3-alter: hsl(166, 45%, 34%);
   --color4: hsl(198, 50%, 34%);
@@ -23,6 +25,7 @@
   --color8: hsl(24, 75%, 50%);
   --lh: 150%;
   --transition: all 0.25s linear;
+  --border-radius: 5px;
   --shadow: 0px 0px 5px var(--color1-alter);
   --gap-lg: 100px;
   --gap-md: 50px;
@@ -175,5 +178,8 @@
 }
 .woocommerce .checkout.woocommerce-checkout .select2-selection.select2-selection--single {
   border-color: var(--color2);
+}
+.woocommerce a.added_to_cart.wc-forward {
+  display: block;
 }
 /*# sourceMappingURL=_woocommerce.css.map */
