--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -4,18 +4,20 @@
   font-size: 16px;
   line-height: 150%;
   --color-light: #fff;
-  --color-dark: #0a0404;
-  --color-dark1: hsla(345, 5%, 36%, 0.5);
+  --color-dark: #4c484e;
+  --color-dark1: #848485;
   --color-dark2: rgba(0, 0, 0, 0.7);
-  --color1: hsl(215, 75%, 34%);
-  --color1-alter: hsl(205, 55%, 34%);
-  --color1-light: hsla(215, 75%, 34%, 0.6);
-  --color1-light2: hsla(215, 75%, 34%, 0.2);
-  --color2: hsl(198, 75%, 51%);
-  --color2-alter: hsl(198, 55%, 51%);
-  --color2-light: hsla(198, 75%, 51%, 0.6);
-  --color2-light2: hsla(198, 75%, 51%, 0.2);
-  --color2-light3: hsla(198, 75%, 51%, 0.1);
+  --color-dark3: #35363a;
+  --color1: hsl(209, 59%, 14%);
+  --color1-alter: hsl(209, 39%, 14%);
+  --color1-light: hsla(209, 59%, 14%, 0.6);
+  --color1-light2: hsla(209, 59%, 14%, 0.2);
+  --color2: hsl(220, 58%, 20%);
+  --color2-alter: hsl(220, 38%, 20%);
+  --color2-light: hsla(220, 58%, 20%, 0.6);
+  --color2-light2: hsla(220, 58%, 20%, 0.2);
+  --color2-light3: hsla(220, 58%, 20%, 0.1);
+  --slinky-bg: #f6f7f8;
   --color3: hsl(166, 75%, 34%);
   --color3-alter: hsl(166, 45%, 34%);
   --color4: hsl(198, 50%, 34%);
@@ -25,6 +27,7 @@
   --color8: hsl(24, 75%, 50%);
   --lh: 150%;
   --transition: all 0.25s linear;
+  --border-radius: 5px;
   --shadow: 0px 0px 5px var(--color1-alter);
   --gap-lg: 100px;
   --gap-md: 50px;
@@ -70,10 +73,9 @@ body {
 .colored2 {
   color: var(--color1);
 }
-[class*=__container]:not(.pswp__container),
-.hb-container:not(.pswp__container) {
+.hb-container {
   width: 100%;
-  max-width: 1400px;
+  max-width: 1200px;
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
@@ -164,19 +166,22 @@ body {
   padding-bottom: var(--gap-sm);
 }
 .site-header .site-line {
-  font-size: 15px;
-  background-color: var(--color1);
+  background-color: var(--color-dark3);
   color: var(--color-light);
+  border-top: 1px solid var(--color-dark1);
+  border-bottom: 1px solid var(--color-dark1);
+}
+.site-header .site-line .hb-container {
+  font-size: 15px;
   padding-block: var(--gap-xsm);
   position: relative;
-  margin-bottom: var(--gap-xsm);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: var(--gap-xsm);
 }
 @media (max-width: 872px) {
-  .site-header .site-line {
+  .site-header .site-line .hb-container {
     justify-content: center;
   }
   .site-header .site-line__side {
@@ -187,28 +192,6 @@ body {
   .site-header .site-line .advantages {
     display: none;
   }
-}
-.site-header .site-line::before {
-  content: '';
-  width: 100vw;
-  height: 100%;
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  transform: translateX(-100%);
-  background-color: var(--color1);
-}
-.site-header .site-line::after {
-  content: '';
-  width: 100vw;
-  height: 100%;
-  position: absolute;
-  display: block;
-  top: 0;
-  right: 0;
-  transform: translateX(100%);
-  background-color: var(--color1);
 }
 .site-header .site-line__side {
   display: flex;
@@ -234,24 +217,90 @@ body {
     justify-content: center;
   }
 }
-@media (max-width: 600px) {
-  .site-header .site-branding__logo img {
-    width: 100%;
-    max-width: 300px;
-  }
+.site-header .site-branding__logo img {
+  width: 100%;
+  max-width: 259px;
 }
 .site-header .site-branding__side {
+  flex: 1 1 300px;
+  width: 100%;
+  max-width: 800px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: space-between;
   gap: var(--gap-sm);
+}
+@media (max-width: 768px) {
+  .site-header .site-branding__side {
+    justify-content: center;
+  }
 }
 .site-header .site-branding__side a {
   text-decoration: none;
   font-size: 18px;
 }
-.main-navigation {
-  border-top: 1px solid var(--color1-light2);
-  border-bottom: 1px solid var(--color1-light2);
+.site-header .site-branding__search {
+  display: flex;
+  gap: var(--gap-sm);
+}
+@media (min-width: 1070px) {
+  .site-header .site-branding__search .mob-menu-trigger {
+    display: none;
+  }
+}
+.site-header .site-branding__search .mob-menu-trigger {
+  background: none;
+  border-color: var(--color-dark);
+}
+.site-header .site-branding__search input,
+.site-header .site-branding__search .addsearch.search-field {
+  width: 100%;
+  display: block;
+  padding: 12px 14px;
+  box-sizing: border-box;
+  border-top: 2px solid var(--color-dark2);
+  border-bottom: 2px solid var(--color-dark2);
+  border-left: 1px solid var(--color-dark);
+  border-right: 1px solid var(--color-dark);
+}
+@media (min-width: 768px) {
+  .site-header .site-branding__search input,
+  .site-header .site-branding__search .addsearch.search-field {
+    min-width: 342px;
+  }
+}
+@media (max-width: 768px) {
+  .site-header .site-branding__search input,
+  .site-header .site-branding__search .addsearch.search-field {
+    width: 100%;
+    min-width: unset;
+    max-width: unset;
+  }
+}
+.site-header .site-branding__contacts {
+  font-size: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--gap-xsm);
+}
+.site-header .site-branding__contacts a {
+  font-size: inherit;
+  color: inherit;
+}
+.site-header .site-branding__contacts a:hover {
+  text-decoration: underline;
+}
+.site-header .site-branding__contacts em {
+  margin-right: var(--gap-sm);
+}
+.site-header__aftertext {
+  background-color: var(--color1);
+  padding-block: var(--gap-xsm);
+  font-weight: 500;
+}
+.main-navigation a {
+  color: var(--color-dark);
 }
 .main-navigation .menu-toggle {
   background-color: transparent;
@@ -283,6 +332,7 @@ body {
 }
 @media (max-width: 1070px) {
   .main-navigation ul#primary-menu {
+    display: none !important;
     position: fixed;
     top: 0;
     left: 0;
@@ -335,8 +385,13 @@ body {
   }
 }
 .main-navigation ul#primary-menu > .menu-item.menu-item-has-children > .sub-menu {
-  padding: var(--gap-xsm);
+  padding: var(--gap-sm);
   background-color: var(--color-light);
+}
+@media (min-width: 1070px) {
+  .main-navigation ul#primary-menu > .menu-item.menu-item-has-children > .sub-menu {
+    transform: translateX(-300px);
+  }
 }
 .main-navigation ul#primary-menu > .menu-item.menu-item-has-children > .sub-menu > .menu-item.menu-item-has-children a {
   margin-right: var(--gap-xsm);
@@ -354,25 +409,114 @@ body {
 .main-navigation ul#primary-menu > .menu-item.menu-item-has-children > .sub-menu > .menu-item.menu-item-has-children > .sub-menu a {
   font-weight: normal;
 }
+.slinky-mobile-menu .mobile-menu.slinky-menu.slinky-theme-default {
+  min-height: 100vh !important;
+}
+.slinky-mobile-menu ul {
+  padding-left: 0;
+}
+@media (min-width: 1070px) {
+  .slinky-mobile-menu {
+    display: none;
+  }
+  .slinky-mobile-menu .close-slinky-menu {
+    display: none;
+  }
+}
+.slinky-mobile-menu:not(.active) {
+  opacity: 0;
+  pointer-events: none;
+  transform: translateX(-100%);
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.slinky-mobile-menu.active .close-slinky-menu {
+  background: none;
+  border: 1px solid var(--color1-light2);
+  font-size: 25px;
+  line-height: 100%;
+  margin-left: auto;
+  padding: 0;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 1070px) {
+  .slinky-mobile-menu.active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: var(--gap-sm);
+    background-color: var(--slinky-bg);
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    z-index: 999999999;
+  }
+  .slinky-mobile-menu.active ul {
+    padding-left: 0;
+  }
+}
 .site-footer {
-  padding-top: var(--gap-md);
-  background-color: var(--color-dark2);
+  margin-top: var(--gap-xsm);
+  background-color: #444645;
   color: var(--color-light);
+  line-height: var(--lh);
 }
 .site-footer a {
-  color: var(--color2);
+  color: inherit;
+  transition: var(--transition);
+}
+.site-footer a:hover {
+  text-decoration: underline;
+}
+.site-footer .footer-badges {
+  background-color: var(--color1);
+}
+.site-footer .footer-badges .hb-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.site-footer .footer-line {
+  background-color: var(--color2);
+}
+.site-footer .footer-line .hb-container {
+  padding-block: var(--gap-sm);
+  font-weight: 500;
+}
+.site-footer a {
   text-decoration: none;
 }
 .site-footer__holder {
+  padding-top: var(--gap-md);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: var(--gap-sm);
 }
+.site-footer__holder > *,
+.site-footer__holder .cell {
+  line-height: var(--lh);
+}
+@media (max-width: 768px) {
+  .site-footer__holder {
+    justify-content: center;
+    align-items: center;
+  }
+}
 .site-footer__item {
   display: flex;
   flex-direction: column;
   gap: var(--gap-xsm);
+}
+@media (max-width: 768px) {
+  .site-footer__item {
+    flex: 1 1 100%;
+  }
 }
 .site-footer__item ul {
   padding: 0;
@@ -381,62 +525,44 @@ body {
 }
 .site-footer__item li {
   margin-bottom: 5px;
+  line-height: var(--lh);
 }
-.site-footer__logo {
-  text-align: center;
-  gap: var(--gap-sm);
-}
-.site-footer__logo .custom-logo {
-  padding: var(--gap-xsm);
-  background-color: var(--color-light);
-  border-radius: 5px;
-}
-@media (max-width: 768px) {
-  .site-footer__logo {
-    justify-self: center;
-    align-self: center;
-    margin-inline: auto;
-  }
-}
-.site-footer__bottom {
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--gap-md);
-  align-items: center;
-  justify-content: center;
-  margin-bottom: var(--gap-sm);
-}
-@media (max-width: 768px) {
-  .site-footer__bottom {
-    gap: var(--gap-xsm);
-  }
-}
-.site-footer__social-heading,
-.site-footer__accept-heading {
+.site-footer .footer-menu__heading {
   margin: 0;
   margin-bottom: var(--gap-xsm);
-  text-align: center;
 }
-.site-footer__social-items,
-.site-footer__accept-items {
+.site-footer__links {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
   gap: var(--gap-sm);
+  margin-block: var(--gap-sm);
 }
-.site-footer__social-items a,
-.site-footer__accept-items a,
-.site-footer__social-items i,
-.site-footer__accept-items i {
-  color: var(--color-light);
-  font-size: 30px;
+.site-footer__social {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--gap-sm);
+  font-size: 35px;
 }
-.site-footer__social-items a:hover i,
-.site-footer__accept-items a:hover i {
-  color: var(--color2);
+@media (max-width: 768px) {
+  .site-footer__social {
+    justify-content: center;
+    align-items: center;
+  }
+}
+.site-footer__social a:hover {
+  color: var(--color1-alter);
+}
+.site-footer__accept {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--gap-sm);
+  font-size: 35px;
 }
 .site-footer__copyright {
-  padding-block: var(--gap-xsm);
-  margin-top: var(--gap-xsm);
-  border-top: 1px solid var(--color-light);
+  padding-block: 0 var(--gap-xsm);
+  font-size: 14px;
 }
 .woocommerce a {
   color: var(--color2);
