single product update

--- a/assets/styles/_woocommerce.less
+++ b/assets/styles/_woocommerce.less
@@ -7,6 +7,10 @@
     }
   }
 
+  .woocommerce-notices-wrapper {
+    .hb-container();
+  }
+
   button[type="submit"],
   input[type="submit"],
   .single_add_to_cart_button.button.alt.wp-element-button,
