--- a/assets/styles/_woocommerce.less
+++ b/assets/styles/_woocommerce.less
@@ -169,6 +169,14 @@
       }
     }
   }
+  .variation {
+    margin-top: var(--gap-xsm);
+    display: flex;
+    flex-direction: column;
+    p {
+      margin: 0;
+    }
+  }
 
   //end of cart page
 
