--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -1,3 +1,5 @@
+@import "_variables";
+
 .single-product-container-woo-thumbs-and-meta {
   display: flex;
   flex-wrap: wrap;
@@ -123,3 +125,107 @@ table.variations {
 .quantity-plus {
   margin-right: 15px;
 }
+
+.hb-single-badges {
+  background-color: var(--color2-light3);
+  color: var(--color-light);
+  margin-block: var(--gap-sm) 0;
+
+  &__holder {
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: var(--gap-sm);
+  }
+
+  &__item {
+    color: inherit;
+    text-decoration: none;
+    flex: 1 1 90px;
+  }
+
+  &__text, i {
+    color: var(--color1);
+    margin-bottom: 0;
+  }
+
+  i {
+    font-size: 25px;
+    display: inline-block;
+    padding: var(--gap-sm);
+    border: 1px solid var(--color1);
+    border-radius: 50%;
+
+    transition: var(--transition);
+
+    &:hover {
+      background-color: var(--color1);
+      color: var(--color-light);
+    }
+  }
+}
+
+.hb-single-quote {
+  background-color: var(--color1);
+
+  .hb-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__quotation {
+    background: var(--color-light);
+    padding: var(--gap-md);
+    color: var(--color1);
+    position: relative;
+    z-index: 2;
+    flex: 1 1 300px;
+  }
+
+  &__inner {
+    color: inherit;
+    position: relative;
+    text-align: justify;
+    font-style: italic;
+
+    &::before {
+      content: '\201C';
+      position: absolute;
+      display: block;
+      top: -40px;
+      left: -30px;
+      font-size: 50px;
+      font-family: Arial, sans-serif;
+      line-height: 100%;
+    }
+    &::after {
+      content: '\201D';
+      position: absolute;
+      display: block;
+      bottom: -60px;
+      right: -20px;
+      font-size: 50px;
+      font-family: Arial, sans-serif;
+      line-height: 100%;
+    }
+  }
+
+  &__description {
+    flex: 1 1 300px;
+    color: var(--color-light);
+    padding: var(--gap-md);
+  }
+
+  &__text {
+    & > * {
+      margin-top: 0;
+    }
+  }
+}
+
