single warning small fix for margin bottom

--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -336,8 +336,7 @@ table.variations {
 
 .hb-single-product-warning {
   background-color: var(--color2-light3);
-  margin-block: var(--gap-lg) var(--gap-lg);
-  margin-bottom: 0;
+  margin-block: var(--gap-lg) var(--gap-md);
 
   .hb-container {
     display: flex;
