--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -1035,8 +1035,7 @@ table.variations tr .value select {
 }
 .hb-single-product-warning {
   background-color: var(--color2-light3);
-  margin-block: var(--gap-lg) var(--gap-lg);
-  margin-bottom: 0;
+  margin-block: var(--gap-lg) var(--gap-md);
 }
 .hb-single-product-warning .hb-container {
   display: flex;
