some CSS changes

--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -1,4 +1,5 @@
 @import "_variables";
+@import "_base";
 
 .single-product-container-woo-thumbs-and-meta {
   display: flex;
@@ -11,6 +12,23 @@
     order: 2;
   }
 
+}
+
+.price {
+  color: var(--color1);
+}
+
+//options plugin [variations]
+.variable-items-wrapper {
+ color: var(--color1);
+  span {
+    color: inherit;
+  }
+}
+//end of options plugin
+
+.product_meta {
+  color: var(--color2);
 }
 
 .product-title-summary {
