--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -18,13 +18,21 @@
   color: var(--color1);
 }
 
+.woocommerce-variation-price {
+  span {
+    color: var(--color1) !important;
+  }
+}
+
 //options plugin [variations]
 .variable-items-wrapper {
- color: var(--color1);
+  color: var(--color1);
+
   span {
     color: inherit;
   }
 }
+
 //end of options plugin
 
 .product_meta {
