variations color change

--- a/assets/styles/_woo-single-product.css
+++ b/assets/styles/_woo-single-product.css
@@ -246,6 +246,7 @@ table.variations {
   display: flex;
   flex-direction: column;
   gap: var(--gap-xsm);
+  color: var(--color1);
 }
 table.variations tr {
   display: flex;
