--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -102,6 +102,7 @@ table.variations {
   display: flex;
   flex-direction: column;
   gap: var(--gap-xsm);
+  color: var(--color1);
 
   tr {
     display: flex;
