--- a/assets/styles/_base.css
+++ b/assets/styles/_base.css
@@ -42,6 +42,11 @@
 ._lock {
   overflow: hidden;
 }
+@media (min-width: 768px) {
+  ._lock {
+    padding-right: 17px;
+  }
+}
 body {
   font-family: 'Rubik', sans-serif;
   margin: 0 !important;
@@ -52,6 +57,9 @@ body {
 }
 .padding-block {
   padding-block: var(--gap-md);
+}
+.padding-block-sm {
+  padding-block: var(--gap-sm);
 }
 .padding-block-lg {
   padding-block: var(--gap-lg);
