--- a/assets/styles/_base.less
+++ b/assets/styles/_base.less
@@ -2,6 +2,9 @@
 
 ._lock {
   overflow: hidden;
+  @media (min-width: @mobile) {
+    padding-right: 17px;
+  }
 }
 
 body {
@@ -16,6 +19,10 @@ body {
 
 .padding-block {
   padding-block: var(--gap-md);
+}
+
+.padding-block-sm {
+  padding-block: var(--gap-sm);
 }
 
 .padding-block-lg {
@@ -43,12 +50,12 @@ body {
 }
 
 .hb-container {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    box-sizing: border-box;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
 }
 
 .btn {
@@ -78,12 +85,15 @@ body {
 
   &.btn-contrast {
     background-color: var(--color8);
+
     &:hover {
       background-color: var(--color7);
     }
   }
+
   &.btn-contrast2 {
     background-color: var(--color3);
+
     &:hover {
       background-color: var(--color3-alter);
     }
