--- a/assets/styles/_woo-single-product.css
+++ b/assets/styles/_woo-single-product.css
@@ -42,6 +42,11 @@
 ._lock {
   overflow: hidden;
 }
+@media (min-width: 768px) {
+  ._lock {
+    padding-right: 17px;
+  }
+}
 body {
   font-family: 'Rubik', sans-serif;
   margin: 0 !important;
@@ -52,6 +57,9 @@ body {
 }
 .padding-block {
   padding-block: var(--gap-md);
+}
+.padding-block-sm {
+  padding-block: var(--gap-sm);
 }
 .padding-block-lg {
   padding-block: var(--gap-lg);
@@ -312,12 +320,18 @@ table.variations tr .value select {
 .hb-single-badges__item {
   color: inherit;
   text-decoration: none;
-  flex: 1 1 90px;
+  flex: 0 1 90px;
 }
 .hb-single-badges__text,
 .hb-single-badges i {
   color: var(--color1);
   margin-bottom: 0;
+}
+.hb-single-badges__img img {
+  height: 66.6px;
+  object-fit: contain;
+  display: table;
+  margin-inline: auto;
 }
 .hb-single-badges i {
   font-size: 25px;
