--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -178,12 +178,21 @@ table.variations {
   &__item {
     color: inherit;
     text-decoration: none;
-    flex: 1 1 90px;
+    flex: 0 1 90px;
   }
 
   &__text, i {
     color: var(--color1);
     margin-bottom: 0;
+  }
+
+  &__img {
+    img {
+      height: 66.6px;
+      object-fit: contain;
+      display: table;
+      margin-inline: auto;
+    }
   }
 
   i {
