--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -44,6 +44,11 @@
 ._lock {
   overflow: hidden;
 }
+@media (min-width: 768px) {
+  ._lock {
+    padding-right: 17px;
+  }
+}
 body {
   font-family: 'Rubik', sans-serif;
   margin: 0 !important;
@@ -54,6 +59,9 @@ body {
 }
 .padding-block {
   padding-block: var(--gap-md);
+}
+.padding-block-sm {
+  padding-block: var(--gap-sm);
 }
 .padding-block-lg {
   padding-block: var(--gap-lg);
@@ -904,12 +912,18 @@ table.variations tr .value select {
 .hb-single-badges__item {
   color: inherit;
   text-decoration: none;
-  flex: 1 1 90px;
+  flex: 0 1 90px;
 }
 .hb-single-badges__text,
 .hb-single-badges i {
   color: var(--color1);
   margin-bottom: 0;
+}
+.hb-single-badges__img img {
+  height: 66.6px;
+  object-fit: contain;
+  display: table;
+  margin-inline: auto;
 }
 .hb-single-badges i {
   font-size: 25px;
@@ -1131,5 +1145,72 @@ table.variations tr .value select {
 }
 #breadcrumbs a {
   color: var(--color2);
+}
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--color1-light2);
+  z-index: 1050;
+  transition: var(--transition);
+  padding-right: 17px;
+}
+.modal-backdrop:not(.active) {
+  display: none;
+}
+.modal {
+  padding-inline: 10px;
+  box-sizing: border-box;
+  display: block;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1060;
+  width: 100vw;
+  height: 100vh;
+}
+.modal-dialog {
+  width: 100%;
+  max-width: 50rem;
+  min-height: calc(100% - 3.5rem);
+  margin: 1.75rem auto;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.modal-content {
+  border-radius: 2rem;
+  padding: var(--gap-sm);
+  box-sizing: border-box;
+  border-color: transparent;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  outline: none;
+}
+.modal-content .close-modal {
+  text-decoration: none;
+  font-size: 40px;
+  margin-left: auto;
+  display: table;
+  color: var(--color-dark);
+  margin-bottom: var(--gap-sm);
+}
+.modal-content .custom-form-wrapper {
+  color: var(--color-dark);
+  text-align: left;
+}
+@media (max-width: 768px) {
+  .modal-content {
+    padding: 20px;
+  }
 }
 /*# sourceMappingURL=all.css.map */
