product page connected to ACF

--- a/assets/styles/_footer.less
+++ b/assets/styles/_footer.less
@@ -2,7 +2,7 @@
 
 .woocommerce .site-footer,
 .site-footer {
-  margin-top: var(--gap-xsm);
+  //margin-top: var(--gap-xsm);
   background-color: #444645;
   color: var(--color-light);
   line-height: var(--lh);
