--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -324,6 +324,8 @@ table.variations {
 
     flex: 1 1 300px;
 
+    color: var(--color2);
+
     &_img {
       img {
         width: 100%;
@@ -345,6 +347,11 @@ table.variations {
 
     @media (max-width: @mobile) {
       justify-content: center;
+    }
+    img {
+      min-height: 225px;
+      max-height: 225px;
+      object-fit: cover;
     }
   }
 
@@ -372,7 +379,7 @@ table.variations {
 
 .hb-single-product-warning {
   background-color: var(--color2-light3);
-  margin-block: var(--gap-lg) var(--gap-md);
+  margin-block: var(--gap-lg) 0;
 
   .hb-container {
     display: flex;
@@ -385,8 +392,3 @@ table.variations {
     flex: 1 1 300px;
   }
 }
-
-
-
-
-
