quote link change color to light with important

--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -273,6 +273,10 @@ table.variations {
     color: var(--color-light);
     padding: var(--gap-md);
 
+    a {
+      color: var(--color-light) !important;
+    }
+
     @media (max-width: @mobile) {
       padding: var(--gap-sm);
     }
