--- a/assets/styles/_woocommerce.less
+++ b/assets/styles/_woocommerce.less
@@ -3,7 +3,7 @@
 .woocommerce {
 
   a {
-    &:not(header, footer, [class^="hb-"]) {
+    &:not(header, footer) {
       color: var(--color2);
     }
   }
