--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -187,6 +187,9 @@ body {
 .type-page a {
   color: var(--color2);
 }
+.yoast-breadcrumbs {
+  margin-block: var(--gap-xsm);
+}
 .site-header {
   padding-bottom: var(--gap-sm);
 }
@@ -1107,6 +1110,105 @@ table.variations tr .value select {
 }
 .hb-single-product-warning__cell {
   flex: 1 1 300px;
+}
+.hb-category-page .hb-category-page-hero__holder {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: var(--gap-md);
+}
+@media (max-width: 768px) {
+  .hb-category-page .hb-category-page-hero__holder {
+    justify-content: center;
+  }
+}
+.hb-category-page .hb-category-page-hero__item {
+  flex: 1 1 300px;
+}
+@media (max-width: 768px) {
+  .hb-category-page .hb-category-page-hero__item {
+    flex: 1 1 100%;
+  }
+}
+.hb-category-page .hb-category-page-hero__item h1 {
+  margin-top: 0;
+}
+.hb-category-page .hb-category-page-hero__item_img img {
+  width: 100%;
+  display: block;
+  max-width: 600px;
+  object-fit: cover;
+}
+@media (max-width: 768px) {
+  .hb-category-page .hb-category-page-hero__item_img img {
+    display: table;
+    margin-inline: auto;
+  }
+}
+.hb-category-page .hb-category-page-hero__links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: var(--gap-sm);
+  margin-top: var(--gap-md);
+}
+@media (max-width: 768px) {
+  .hb-category-page .hb-category-page-hero__links a {
+    flex: 1 1 auto;
+    text-align: center;
+  }
+}
+.hb-category-page .hb-category-page-featured {
+  background-color: var(--color2-light3);
+  padding-block: var(--gap-sm);
+}
+.hb-category-page .hb-category-page-featured__heading {
+  margin-top: 0;
+}
+.hb-category-page .hb-category-page-featured__holder {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(min-content, 270px));
+  justify-content: center;
+  gap: var(--gap-sm);
+}
+.hb-category-page .hb-category-page-featured__item {
+  padding: var(--gap-sm);
+  background-color: var(--color-light);
+  display: flex;
+  flex-direction: column;
+}
+.hb-category-page .hb-category-page-featured__item a {
+  text-decoration: none;
+}
+.hb-category-page .hb-category-page-featured .btn {
+  margin-top: auto;
+  width: fit-content;
+}
+.hb-category-page .hb-category-page-featured img {
+  display: block;
+  width: 100%;
+  max-width: 300px;
+  height: 225px;
+  object-fit: cover;
+}
+.hb-category-page .term-description {
+  display: none;
+}
+.hb-category-page .hb-category-page-testimonials {
+  background-color: var(--color2-light3);
+}
+.hb-category-page .hb-category-page-testimonials__item {
+  padding: var(--gap-sm) var(--gap-md);
+}
+.hb-category-page .hb-category-page-testimonials__heading {
+  margin: 0;
+}
+.hb-category-page .hb-category-page-testimonials .swiper-button-next,
+.hb-category-page .hb-category-page-testimonials .swiper-button-prev {
+  color: var(--color2);
+}
+.hb-category-page .hb-category-page-testimonials .swiper-pagination-bullet {
+  background: var(--color2);
 }
 .type-post a,
 .entry-title a a {
