--- a/assets/styles/all.less
+++ b/assets/styles/all.less
@@ -9,5 +9,6 @@
 @import "_front-page";
 @import "_woocommerce";
 @import "_woo-single-product";
+@import "_woo-category-page";
 @import "_wp-inner-pages";
 @import "_modal";
